--- a/src/components/SingleImage/singleimage.css
+++ b/src/components/SingleImage/singleimage.css
@@ -11,23 +11,42 @@
 .singleImage {
   height: 100%;
   width: 100%;
-  max-height: 40vw;
-  object-fit: contain;
+
+  object-fit: cover;
 }
 .singleImageContainer {
   flex: 1;
+  height: 40vw;
 }
 .imageDate {
   margin-top: 10px;
 }
 .singleImageDescriptionContainer {
   flex: 1;
-  padding: 10px;
+
+  padding: 10px 20px;
   color: white;
+}
+.readMoreBtn {
+  background: transparent;
+  border: none;
+  padding: 3px;
+  color: skyblue;
+  cursor: pointer;
+  font-weight: 500;
 }
 .imageDescription {
   letter-spacing: 3px;
   font-size: 12px;
+}
+.imageTitle {
+  font-weight: 400;
+}
+.shareContainer {
+  margin-top: 15px;
+}
+.sharesingle {
+  margin-right: 10px;
 }
 
 /* responsive desgn */
@@ -35,6 +54,9 @@
   .singleImageWrapper {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
   }
   .singleImageContainer {
     flex: 60%;
@@ -44,5 +66,9 @@
   .singleImage {
     max-height: 60vw;
     width: 100%;
+  }
+  .imageTitle {
+    font-size: 20px;
+    margin-top: 10px;
   }
 }
