--- a/src/components/Images/images.css
+++ b/src/components/Images/images.css
@@ -14,8 +14,32 @@
   margin-top: 10px;
   border-radius: 20px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.filterHeading {
+  font-weight: 400;
+  font-size: 22px;
+}
+.labelText {
+  margin-right: 20px;
+}
+.filterButton {
+  padding: 5px 10px;
+  border-radius: 6px;
+  background-color: #2ba0d2;
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.3 ease-in;
+}
+.filterButton:hover {
+  background-color: #328bb1;
+}
+.dateInput {
+  margin-right: 20px;
 }
 .headerWrapper {
   height: 100vh;
@@ -49,10 +73,29 @@
   background-color: rgb(72, 144, 172);
   color: white;
   cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  outline: none;
+}
+.exploreMore:hover {
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  background-color: rgb(63, 121, 143);
 }
 
 @media screen and (max-width: 480px) {
   .imagesWrapper {
     width: 96vw;
+  }
+  .dateFilters {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .dateInput {
+    margin-top: 6px;
+    width: 100%;
+  }
+  .filterButton {
+    margin-top: 8px;
+    width: 70%;
   }
 }
