--- a/src/components/SingleImage/singleimage.css
+++ b/src/components/SingleImage/singleimage.css
@@ -29,6 +29,7 @@
 }
 .readMoreBtn {
   background: transparent;
+  outline: none;
   border: none;
   padding: 3px;
   color: skyblue;
@@ -36,6 +37,7 @@
   font-weight: 500;
 }
 .imageDescription {
+  margin-top: 20px;
   letter-spacing: 3px;
   font-size: 12px;
 }
@@ -47,6 +49,44 @@
 }
 .sharesingle {
   margin-right: 10px;
+}
+.likeButton {
+  outline: none;
+  border: none;
+  margin-top: 20px;
+  padding: 5px 10px;
+  border-radius: 6px;
+  font-size: 16px;
+  text-transform: uppercase;
+  background-color: #ffffff;
+  color: black;
+  width: 120px;
+}
+.liked {
+  color: crimson;
+}
+.heartIcon {
+  margin-left: 12px;
+  cursor: pointer;
+  color: white;
+  transition: all 1s ease-in-out;
+}
+.loader {
+  color: white;
+  height: 300px;
+  width: 300px;
+}
+.loaderContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+.loaderText {
+  color: white;
+  text-transform: uppercase;
+  font-weight: 400;
 }
 
 /* responsive desgn */
